# English-Bulgarian-5000-words

./: .gitignore  README.md  main.py  pyproject.toml
README/: README.md
